@@ -1314,12 +1314,16 @@ process_options (void)
 
 #ifndef HAVE_cloog
   if (flag_graphite
+      || flag_graphite_identity
       || flag_loop_block
+      || flag_loop_flatten
       || flag_loop_interchange
       || flag_loop_strip_mine
-      || flag_graphite_identity
       || flag_loop_parallelize_all)
-    sorry ("Graphite loop optimizations cannot be used");
+    sorry ("Graphite loop optimizations cannot be used (-fgraphite, "
+	   "-fgraphite-identity, -floop-block, -floop-flatten, "
+	   "-floop-interchange, -floop-strip-mine, -floop-parallelize-all, "
+	   "and -ftree-loop-linear)");
 #endif
 
   /* Unrolling all loops implies that standard loop unrolling must also
